2004-12-02 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/peeph.def: fixed bug #1076940

2004-12-02 Slade Rich <slade_rich AT users.sourceforge.net>

	* device/include/pic/pic16f877.h : added an include file for the PIC16F877 device.

2004-11-28 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	Adding support for replacing ljmps with sjmps in jumptables
	generated for switch statements. For now you need to set the
	environment variable SDCC_SJMP_JUMPTABLE to enable this.
	Now 4 algorithms for mcs51 jumptable generation are used:
	ljmp or sjmp jumptables for up to 16 cases, stack-pushing target
	addresses loaded pc-relative for up to 112 cases and stack-pushing
	target addresses loaded with offset from dptr for up to 256 cases.

	* src/SDCCpeeph.c: added peephole conditional labelJTInRange
	* src/mcs51/main.c: adapted constants for switch table generation
	* src/mcs51/peeph.def: added 260.x for replacing ljmp with sjmp

2004-11-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/printf_large.c (_print_format): fixed bug 1073386
	* support/regression/tests/bug1057979.c: added test for bug 1073386

2004-11-25 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/pcode.c: fixed bug which may produce error in non-GNU
	compilers

2004-11-25 Vangelis Rokas <vrokas AT otenet.gr>

	* src/pic16/device.h,
	* src/pic16/genarith.c,
	* src/pic16/glue.c,
	* src/pic16/main.c,
	* src/pic16/pcode.c: applied patches #1068154 and #1070213

2004-11-24 Vangelis Rokas <vrokas AT otenet.gr>

	Large cummulative patch for pic16 port.
	* device/lib/pic16/gstack.h: NEW, user can specify its own handler
	to call when a stack overflow occurs,
	* (malloc.h): added CVS Id tag,
	* (pic18f{242,252,442,452}.h): added T0CONbits structure and
	variable,
	* added libc directory. The current version of LibC contains string
	functions, ctype functions and macros and some functions of the
	stdlib set (like malloc/free/atof/atoi etc...). All functions are to